@@ -11,6 +11,7 @@ postgresql-unit (7.0-1) UNRELEASED; urgency=medium
   * Support Infinity and NaN.
   * Add strict comparison operators that error out when dimensions of
     arguments do not match: << <<= == <<>> >>= >>.
+  * Add range type over units: unitrange.
 
  -- Christoph Berg <myon@debian.org>  Sun, 08 Jul 2018 21:46:17 +0200
 
